--- a/TestBot.csproj
+++ b/TestBot.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Telegram.Bot" Version="15.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="BotFramework">
+      <HintPath>..\BotFramework\BotFramework\bin\Debug\netstandard2.1\BotFramework.dll</HintPath>
+    </Reference>
+  </ItemGroup>
 
 </Project>
